Graph generator with parameters of min and maxcost, amount of nodes and edges

--- a/DijkstraAlgorithm/MainWindow.xaml
+++ b/DijkstraAlgorithm/MainWindow.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DijkstraAlgorithm"
         mc:Ignorable="d"
-        Title="MainWindow" Height="424.042" Width="531.383">
+        Title="MainWindow" Height="493.042" Width="721.133">
 	<Grid AllowDrop="True" RenderTransformOrigin="0.5,0.5">
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="190*" />
-			<ColumnDefinition Width="333*" />
+			<ColumnDefinition Width="190*" MaxWidth="190" MinWidth="190" />
+			<ColumnDefinition Width="333*" FrameworkElement.FlowDirection="RightToLeft" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="28*" />
-			<RowDefinition />
+			<RowDefinition Height="382*" />
+			<RowDefinition Height="11*" />
 		</Grid.RowDefinitions>
 
 		<Button x:Name="addNodeButton" Content="Add node" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="11,39,0,0" Height="20" RenderTransformOrigin="0.5,0.5" Click="addNode_button_Click"/>
@@ -21,22 +21,23 @@
 		<Button x:Name="removeButton" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="59,89,0,0" Height="20" Click="remove_ButtonClicked"/>
 
 		<Canvas Name="MainCanvas" Margin="6,10,10,0" Background="#FF71DEFF" Grid.Column="1" MouseLeftButtonDown="Canvas_MouseLeftButtonDown" AllowDrop="True"/>
-		<Button x:Name="button2" Content="Calculate" Margin="59,160,0,0" VerticalAlignment="Top" Height="20" Click="calculateButtonClick" Width="75" HorizontalAlignment="Left"/>
-		<Button x:Name="button3" Content="Next" HorizontalAlignment="Left" Margin="105,185,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="nextButtonClick"/>
-		<Button x:Name="button4" Content="Previous" HorizontalAlignment="Left" Margin="11,185,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="previousButtonClick"/>
-		<Button x:Name="button5" Content="Generate" HorizontalAlignment="Left" Margin="59,261,0,0" VerticalAlignment="Top" Width="75" Height="20"/>
-		<Label x:Name="label" Content="Graph generator" Margin="11,230,0,0" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalContentAlignment="Center" Height="26" HorizontalAlignment="Left" Width="169"/>
-		<Label x:Name="label_Copy" Content="Simulate" Margin="10,129,0,0" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalContentAlignment="Center" Height="26" HorizontalAlignment="Left" Width="170"/>
+		<Button x:Name="button2" Content="Calculate" Margin="59,218,0,0" VerticalAlignment="Top" Height="20" Click="calculateButtonClick" Width="75" HorizontalAlignment="Left"/>
+		<Button x:Name="button3" Content="Next" HorizontalAlignment="Left" Margin="105,244,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="nextButtonClick"/>
+		<Button x:Name="button4" Content="Previous" HorizontalAlignment="Left" Margin="11,244,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="previousButtonClick"/>
+		<Button x:Name="button5" Content="Generate" HorizontalAlignment="Left" Margin="59,320,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="generateButtonClicked"/>
+		<Label x:Name="label" Content="Graph generator" Margin="11,288,0,0" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalContentAlignment="Center" Height="26" HorizontalAlignment="Left" Width="169"/>
+		<Label x:Name="label_Copy" Content="Simulate" Margin="10,188,0,0" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalContentAlignment="Center" Height="26" HorizontalAlignment="Left" Width="170"/>
 		<Label x:Name="label_Copy1" Content="Edit" Margin="10,10,0,0" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalContentAlignment="Center" Height="24" HorizontalAlignment="Left" Width="170"/>
 		<Button x:Name="setStartNodeButton" Content="Start node" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="11,64,0,0" Height="20" RenderTransformOrigin="0.5,0.5" Click="setStartNodeButtonClick"/>
 		<Button x:Name="setEndNodeButton" Content="End node" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="105,64,0,0" Height="20" Click="setEndNodeButtonClick"/>
-		<TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="60,286,0,0" TextWrapping="Wrap" Text="5" VerticalAlignment="Top" Width="120"/>
-		<TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="60,314,0,0" TextWrapping="Wrap" Text="5" VerticalAlignment="Top" Width="120"/>
-		<Label x:Name="label1" Content="Nodes" HorizontalAlignment="Left" Margin="8,282,0,0" VerticalAlignment="Top" Height="23"/>
-		<Label x:Name="label1_Copy" Content="Edges" HorizontalAlignment="Left" Margin="10,310,0,0" VerticalAlignment="Top" Height="27"/>
-		<Label x:Name="label1_Copy1" Content="Cost" HorizontalAlignment="Left" Margin="10,342,0,0" VerticalAlignment="Top" Height="27"/>
-		<TextBox x:Name="textBox1_Copy" HorizontalAlignment="Left" Height="23" Margin="60,342,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="52"/>
-		<TextBox x:Name="textBox1_Copy1" HorizontalAlignment="Left" Height="23" Margin="129,342,0,0" TextWrapping="Wrap" Text="20" VerticalAlignment="Top" Width="51"/>
-		<Label x:Name="label1_Copy2" Content="-" HorizontalAlignment="Left" Margin="112,338,0,0" VerticalAlignment="Top" Height="23" Width="17" HorizontalContentAlignment="Center"/>
+		<TextBox x:Name="nodesTextBox" HorizontalAlignment="Left" Height="24" Margin="60,344,0,0" TextWrapping="Wrap" Text="5" VerticalAlignment="Top" Width="120"/>
+		<TextBox x:Name="edgesTextBox" HorizontalAlignment="Left" Height="24" Margin="60,372,0,0" TextWrapping="Wrap" Text="5" VerticalAlignment="Top" Width="120"/>
+		<Label x:Name="label1" Content="Nodes" HorizontalAlignment="Left" Margin="8,340,0,0" VerticalAlignment="Top" Height="24" Width="44"/>
+		<Label x:Name="label1_Copy" Content="Edges" HorizontalAlignment="Left" Margin="10,368,0,0" VerticalAlignment="Top" Height="28" Width="42"/>
+		<Label x:Name="label1_Copy1" Content="Cost" HorizontalAlignment="Left" Margin="10,400,0,0" VerticalAlignment="Top" Height="28" Width="34"/>
+		<TextBox x:Name="costFromTextBox" HorizontalAlignment="Left" Height="24" Margin="60,400,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="52"/>
+		<TextBox x:Name="costToTextBox" HorizontalAlignment="Left" Height="24" Margin="129,400,0,0" TextWrapping="Wrap" Text="20" VerticalAlignment="Top" Width="51"/>
+		<Label x:Name="label1_Copy2" Content="-" HorizontalAlignment="Left" Margin="112,396,0,0" VerticalAlignment="Top" Height="24" Width="17" HorizontalContentAlignment="Center"/>
+		<Button x:Name="removeButton_Copy" Content="Clear" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="59,129,0,0" Height="20" Click="clearButtonClicked"/>
 	</Grid>
 </Window>
